header align fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -24,7 +24,7 @@ header {
 		position: relative;
 		width: 1180px;
 		margin: 0 auto;
-	  	top: 50%;
+	  	top: 30px;
 	  	transform: translateY(-50%);
 	}
 
